--- a/src/main/resources/templates/framer.html
+++ b/src/main/resources/templates/framer.html
@@ -24,7 +24,7 @@
                         <input type="text" id="headerValue" name="headerValue" th:value="${headerValue}"
                                placeholder="header value" class="w-full pr-16 input input-primary input-bordered">
                         <button type="button" class="absolute top-0 right-0 rounded-l-none btn btn-primary"
-                                onclick="getSrc()">SET
+                                onclick="getSrc()">LOAD IFRAME
                         </button>
                     </div>
                 </div>
